--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 788670788080.dkr.ecr.$AWS_REGION.amazonaws.com
+      - aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 788670788080.dkr.ecr.eu-central-1.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
